nova tabela e mudança do fluxo para entrada de medicamentos
